# nomad-iv-sjis

./: .gitignore  README.md  nomalized.archive.json  normalized.txt  pyproject.toml
src/nomad_iv_sjis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nomad_iv_sjis/helper/: makezip.py
src/nomad_iv_sjis/normalizers/: __init__.py  ivnormalizer.py
src/nomad_iv_sjis/schema_packages/: __init__.py  ivdata.py
tests/data/: test_iv.archive.yaml
